<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">流量加油站</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_loginout">退出</string>
    <string name="contacts_share">确认分享</string>
    <string name="home">流量监控</string>
    <string name="home_detail">使用详情</string>
    <string name="home_amount">总量</string>
    <string name="home_start">0MB</string>
    <string name="home_unused">剩余</string>
    <string name="home_used">已用</string>
    <string name="jiayou">流量加油</string>
    <string name="jiayou_desp_1">.全国漫游（不含港澳台）.全天候 .当月有效</string>
    <string name="jiayou_desp_2">.全国漫游（不含港澳台）.全天候 .长期有效</string>
    <string name="jiayou_desp_3">.省内漫游 .23：00-07：00 .当月有效</string>
    <string name="jiayou_1_error">全国流量数据获取失败，请重新获取后再加油</string>
    <string name="jiayou_3_error">夜间专用流量数据获取失败，请重新获取后再加油</string>
    <string name="jiayou_desp_1_1">0.06-0.2元/MB 加的越多越便宜（限当月有效）</string>
    <string name="jiayou_desp_1_2">0.2元/MB 想加多少加多少（永久有效）</string>
    <string name="jiayou_desp_1_3">0.007-0.01元/MB不等 加的越多越便宜（限当月有效）</string>
    <string name="jiayou_hint1">请输入流量数值</string>
    <string name="jiayou_hint1_desp">指定流量</string>
    <string name="jiayou_hint1_dw">MB</string>
    <string name="jiayou_hint2">请输入金额数值</string>
    <string name="jiayou_hint2_desp">指定金额</string>
    <string name="jiayou_hint2_dw">元</string>
    <string name="jiayou_desp1">说明：全国流量（不含港澳台） 全天候 当月有效</string>
    <string name="jiayou_desp3">说明：省内漫游 23：00-07：00 当月有效</string>
    <string name="jiayou_desp2">说明：省内漫游 23：00-07：00 每月续加</string>
    <string name="jiayou_desp5">说明：省内漫游.全天候.当月有效</string>
    <string name="jiayou_desp4">说明：省内漫游.全天候.当月有效 每月续加</string>
    <string name="jiayou_yz">请输入验证码</string>
    <string name="jiayou_zhifu">流量支付</string>
    <string name="jiayou_error1">输入的金额或者流量数值不能为空且不能为0，请您重新检查后再次输入</string>
    <string name="gonglve">玩转流量</string>
    <string name="market">流量超市</string>
    <string name="more">更多</string>
    <string name="gonglve_title_1">个性化攻略</string>
    <string name="gonglve_title_2">活动专区</string>
    <string name="gonglve_title_3">应用推荐</string>
    <string name="gonglve_title_1_jiayou">一键加油</string>
    <string name="gonglve_title_2_detail_name">活动名称：</string>
    <string name="gonglve_title_2_detail_content">活动内容：</string>
    <string name="gonglve_title_2_detail_rule">活动规则：</string>
    <string name="gonglve_title_2_detail_time">活动有效期：</string>
    <string name="gonglve_title_2_detail_area">活动区域：</string>
    <string name="gonglve_title_2_detail_link">活动链接：</string>
    <string name="gonglve_tuan_person_1">已经有</string>
    <string name="gonglve_tuan_person_2">人购买</string>
    <string name="gonglve_tuan_lasttime">剩余时间</string>
    <string name="login_yz">验证码</string>
    <string name="login_hqyz">获取验证码</string>
    <string name="login_jihuo">我 要 激 活</string>
    <string name="login_changenum">更换号码</string>
    <string name="login_cancel">取消</string>
    <string name="login_phonenum_error">获取手机号码失败，请手动输入您的手机号码进行激活操作</string>
    <string name="more_tel">手机号码</string>
    <string name="more_value">加油站预警</string>
    <string name="more_value_small">已用流量达到设定比例时提醒</string>
    <string name="more_his">历史分析</string>
    <string name="day_history">日流量分析</string>
    <string name="month_hittory">月流量分析</string>
    <string name="no_data">无数据，请重试</string>
    <string name="more_suggest">意见反馈</string>
    <string name="more_share">软件分享</string>
    <string name="more_update">版本检测</string>
    <string name="more_about">关于</string>
    <string name="share_name">收件人：</string>
    <string name="share_ok">分   享</string>
    <string name="share_content_title">推荐内容：</string>
    <string name="share_content_qh">向您推荐【青海电信流量加油站】，为您度身打造的流量专属服务，快来体验一下吧！</string>
    <string name="share_content_js">向您推荐【江苏电信流量加油站】，为您度身打造的流量专属服务，快来体验一下吧！</string>
	<string name="tishi_choicephone">请选择您的手机类型</string>
    <string name="suggest_send">发件人：</string>
    <string name="suggest_tip">您的建议是我们不断进步的动力</string>
    <string name="suggest_null">建议内容不能为空</string>
    <string name="suggest_fail">建议发送失败</string>
    <string name="suggest_comp">我们已收到您的反馈意见!</string>
    <string name="timeout_exp">网络异常，请稍候再试！</string>
    <string name="network_exp">网络不给力，请检查您的网络设置是否正确</string>
    <string name="tishi">提示</string>
    <string name="tishi_ok">确定</string>
    <string name="tishi_cancel">取消</string>
    <string name="tishi_loginout">您确认要退出吗</string>
	<string name="tishi_loading">正在加载中</string>
	<string name="yzm_now">正在获取验证码</string>
	<string name="yzm_exp">获取验证码失败，请您稍后再试试</string>
	<string name="yzm_comp">验证码已发送</string>
	<string name="yzm_null">验证码不能为空</string>
	<string name="now_loading">正在加载中，请稍后再试</string>
	<string name="update_info_error">获取升级信息失败</string>
	<string name="update_info_isnew">您正在使用最新版流量加油站</string>
	<string name="set_value_fail">设置阀值失败</string>
	<string name="set_value_success">设置阀值成功</string>
	<string name="order_name">加油内容：</string>
	<string name="order_date">加油时间：</string>
	<string name="order_statue">工单状态</string>
	<string name="share_desp">分享号码：</string>
	<string name="share_date">分享时间：</string>
	<string name="share_statue">分享状态</string>
	<string name="order_title">加油记录</string>
	<string name="share_comp">分享成功</string>
	<string name="share_error">分享失败</string>
	<string name="share_now">正在分享中</string>
	<string name="share_null">请您选择至少一个联系人</string>
	<string name="share_title">分享记录</string>
	<string name="download_ok">是否确认下载</string>
	<string name="tuan_tip">温馨说明:\n1.即买即用，中国电信全网漫游使用\n2.长期有效，可以跨月使用</string>
	<string name="area">地区</string>
	<string name="fft">费费通</string>
	<string name="fft_add">添加账号</string>
	<string name="fft_manager">管理账号</string>
	
	<string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开可以刷新</string>
    <string name="header_hint_refresh_loading">正在刷新&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
</resources>