<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/main_title"/>
	<LinearLayout 
	    android:id="@+id/gonglve_title_2_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="3dip"
	    	android:orientation="horizontal">
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="2"
	            android:text="@string/gonglve_title_2_detail_name"/>
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	            android:id="@+id/gonglve_title_2_detail_name"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="3dip"
	    	android:orientation="horizontal">
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="2"
	            android:text="@string/gonglve_title_2_detail_content"/>
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	            android:id="@+id/gonglve_title_2_detail_content"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="3dip"
	    	android:orientation="horizontal">
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="2"
	            android:text="@string/gonglve_title_2_detail_time"/>
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	            android:id="@+id/gonglve_title_2_detail_time"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="3dip"
	    	android:orientation="horizontal">
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="2"
	            android:text="@string/gonglve_title_2_detail_link"/>
	        <TextView 
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:autoLink="all"
	            android:id="@+id/gonglve_title_2_detail_link"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>