<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   	android:gravity="center" >
    <LinearLayout
	    android:layout_width="300dip"
	    android:layout_height="150dip"
	    android:orientation="vertical"
	    android:background="@drawable/dialog_bg">
	    <TextView 
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:textColor="@android:color/darker_gray"
    		android:gravity="center"
    		android:textSize="22sp"
    		android:layout_marginTop="20dip"
    		android:layout_marginLeft="10dip"
    		android:layout_marginRight="10dip"
    		android:text="@string/download_ok"/>
        <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"    
	    	android:gravity="center"	
	    	android:orientation="horizontal">
	        <TextView 
	            android:id="@+id/confirm_button"
	            android:layout_width="100dip"
	    		android:layout_height="40dip"
	    		android:layout_weight="1"
	    		android:textColor="@android:color/white"
	    		android:gravity="center"
	    		android:textSize="18sp"
	    		android:layout_marginLeft="20dip"
	    		android:layout_marginRight="10dip"
	    		android:layout_marginTop="20dip"
	    		android:layout_marginBottom="20dip"
	    		android:background="@drawable/confirm_button_sel"
	    		android:text="@string/tishi_ok"/>
	        <TextView 
	            android:id="@+id/deny_button"
	            android:layout_width="100dip"
	    		android:layout_height="40dip"
	    		android:layout_weight="1"
	    		android:textColor="@android:color/white"
	    		android:gravity="center"
	    		android:textSize="18sp"
	    		android:layout_marginLeft="10dip"
	    		android:layout_marginRight="20dip"
	    		android:layout_marginTop="20dip"
	    		android:layout_marginBottom="20dip"
	    		android:background="@drawable/deny_button_sel"
	    		android:text="@string/tishi_cancel"/>
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>