<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@android:id/tabhost">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <FrameLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@android:id/tabcontent"
            android:layout_weight="1">
            
        </FrameLayout>
        <TabWidget 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@android:id/tabs"
            android:visibility="gone"
            android:layout_weight="0">
            
        </TabWidget>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/di_bg">
            <RadioGroup 
                android:id="@+id/main_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton 
                    android:id="@+id/home"
                    android:layout_width="fill_parent"
                	android:layout_height="55dip"
	                android:textColor="#ffffff"
		            style="@style/MainTab"   
		            android:text="@string/home"
		            android:textSize="12sp"
		            android:drawableTop="@drawable/home_blue"/>
                <RadioButton 
                    android:id="@+id/jiayou"
                    android:layout_width="fill_parent"
                	android:layout_height="55dip"
	                android:textColor="#ffffff"
		            style="@style/MainTab"   
		            android:text="@string/jiayou"
		            android:textSize="12sp"
		            android:drawableTop="@drawable/gastation_gray"/>
                <RadioButton 
                    android:id="@+id/gonglve"
                    android:layout_width="fill_parent"
                	android:layout_height="55dip"
	                android:textColor="#ffffff"
		            style="@style/MainTab"   
		            android:text="@string/gonglve"
		            android:textSize="12sp"
		            android:drawableTop="@drawable/sign_gray"/>
                <RadioButton 
                    android:id="@+id/more"
                    android:layout_width="fill_parent"
                	android:layout_height="55dip"
	                android:textColor="#ffffff"
		            style="@style/MainTab"   
		            android:text="@string/more"
		            android:textSize="12sp"
		            android:drawableTop="@drawable/more_gray"/>
            </RadioGroup>
            <ImageView 
                android:id="@+id/suggest_new"
                android:layout_width="wrap_content"
               	android:layout_height="wrap_content"
               	android:src="@drawable/list_newmessage"
               	android:layout_alignParentRight="true"
               	android:visibility="gone"
               	android:layout_margin="5dip"/>
        </RelativeLayout>
    </LinearLayout>

</TabHost>