<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/main_title"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dip"
	    android:padding="5dip"
	    android:gravity="center_vertical"
	    android:background="@drawable/nav_add_bg_normal">
	    <ImageView 
	        android:src="@drawable/mail"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"/>
	    <TextView 
	        android:textColor="@android:color/black"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="18sp"
	        android:text="@string/suggest_send"
	        android:layout_margin="5dip"/>	    
	    <TextView 
	        android:textColor="@color/more_phone_num"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingLeft="5dip"
	    	android:paddingRight="5dip"
	        android:id="@+id/more_phone_num"
	    	android:textSize="18sp"/>
	</LinearLayout>
	<EditText 
	    android:id="@+id/suggest_content"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:lines="8"
	    android:layout_margin="10dip"
	    android:textSize="16sp"
	    android:padding="10dip"
	    android:gravity="left|top"
	    android:background="@drawable/nav_add_bg_normal"/>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:textSize="12sp"
	    android:padding="5dip"
	    android:textColor="@android:color/darker_gray"
	    android:text="@string/suggest_tip"
	    android:gravity="center"/>
	<TextView 
        android:id="@+id/suggest_button"
   	    android:layout_width="fill_parent"
   	    android:gravity="center"
   	    android:layout_marginLeft="20dip"
   	    android:layout_marginTop="20dip"
   	    android:layout_marginRight="20dip"
   	    android:textSize="18sp"
   	    android:background="@drawable/button"
   	    android:layout_height="wrap_content"
   	    android:textColor="@android:color/white"
   	    android:text="@string/share_ok"/>
</LinearLayout>