<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
        <TextView 
	        android:id="@+id/jiayou_desp_1"
	        android:textColor="@android:color/black"
	        android:text="@string/jiayou_desp_1"
	        android:textSize="13sp"
	        android:singleLine="true"
	        android:gravity="center"
	        android:layout_marginTop="15dip"
         	android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:ellipsize="marquee" 
        	android:focusable="true" 
        	android:marqueeRepeatLimit="marquee_forever" 
        	android:focusableInTouchMode="true" 
        	android:scrollHorizontally="true"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"/>
	    <com.linkage.gas_station.myview.GalleryFlow
	        android:id="@+id/jiayou_gallery"
	        android:fadingEdge="none"
	        android:layout_margin="15dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	    </com.linkage.gas_station.myview.GalleryFlow>
	    <TextView 
	        android:id="@+id/jiayou_desp_2"
	        android:text="@string/jiayou_desp_1"
	        android:textColor="@color/jiayou_desp2"
	        android:textSize="13sp"
	        android:singleLine="true"
	        android:layout_marginLeft="15dip"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"/>
	    <LinearLayout 
	        android:orientation="vertical"	      
	        android:paddingBottom="10dip"  
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent">
	        <RelativeLayout 
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:layout_weight="1"
			    android:layout_width="match_parent"
		    	android:layout_height="match_parent">
		    	<hong.specialEffects.wheel.WheelView 
		    	    android:layout_gravity="center_vertical" 
		    	    android:id="@+id/jiayou_choice_1" 
		    	    android:layout_marginTop="5dip"
		    	    android:layout_width="match_parent" 
		    	    android:layout_height="match_parent" />
		    	<LinearLayout 
		    	    android:id="@+id/jiayou_choice_2" 
		    	    android:layout_width="match_parent" 
		    	    android:layout_height="match_parent"
		    	    android:layout_marginTop="5dip"
		    	    android:visibility="gone"
		    	    android:orientation="vertical">
		    	    <LinearLayout 
		    	        android:layout_width="match_parent" 
		    	    	android:layout_height="wrap_content"
		    	    	android:gravity="center_vertical"
		    	    	android:orientation="horizontal">
		    	        <TextView 
		    	            android:id="@+id/jiayou_choice_2_left1"
		    	            android:background="@drawable/jiayou_select_left"
		    	            android:layout_width="wrap_content" 
		    	            android:paddingRight="10dip"
		    	            android:gravity="right|center"
		    	            android:textColor="@android:color/white"
		    	            android:text="@string/jiayou_hint1_desp"
		    	    		android:layout_height="wrap_content"/>
		    	        <EditText 
		    	            android:id="@+id/jiayou_choice_2_center1"
		    	            android:background="@drawable/jiayou_select_center"
		    	            android:layout_width="150dip" 
		    	    		android:layout_height="wrap_content"
		    	    		android:paddingRight="10dip"
		    	            android:textSize="15sp"
		    	            android:inputType="number"
		    	    		android:gravity="right|center"
		    	    		android:hint="@string/jiayou_hint1"/>
		    	        <TextView 
		    	            android:id="@+id/jiayou_choice_2_right1"
		    	            android:layout_width="wrap_content" 
		    	    		android:layout_height="wrap_content"
		    	    		android:textSize="15sp"
		    	    		android:gravity="center"
		    	    		android:text="@string/jiayou_hint1_dw"
		    	    		android:background="@drawable/jiayou_select_right"/>
		    	            
		    	    </LinearLayout>
		    	    <LinearLayout 
		    	        android:layout_width="match_parent" 
		    	    	android:layout_height="wrap_content"
		    	    	android:gravity="center_vertical"
		    	    	android:orientation="horizontal">
		    	        <TextView 
		    	            android:id="@+id/jiayou_choice_2_left2"
		    	            android:background="@drawable/jiayou_unselect_left"
		    	            android:layout_width="wrap_content" 
		    	            android:paddingRight="10dip"
		    	            android:gravity="right|center"
		    	            android:textColor="@android:color/darker_gray"
		    	            android:text="@string/jiayou_hint2_desp"
		    	    		android:layout_height="wrap_content"/>
		    	        <EditText 
		    	            android:id="@+id/jiayou_choice_2_center2"
		    	            android:background="@drawable/jiayou_unselect_center"
		    	            android:layout_width="150dip" 
		    	    		android:layout_height="wrap_content"
		    	    		android:paddingRight="10dip"
		    	            android:textSize="15sp"
		    	            android:inputType="number"
		    	    		android:gravity="right|center"/>
		    	        <TextView 
		    	            android:id="@+id/jiayou_choice_2_right2"
		    	            android:layout_width="wrap_content" 
		    	    		android:layout_height="wrap_content"
		    	    		android:textSize="15sp"
		    	    		android:gravity="center"
		    	    		android:text="@string/jiayou_hint2_dw"
		    	    		android:background="@drawable/jiayou_unselect_right"/>
		    	            
		    	    </LinearLayout>
		    	</LinearLayout>
			</RelativeLayout>
		    <ImageView 
			    android:id="@+id/jiayou_wantjiayou"
			    android:src="@drawable/jiayou_wantjiayou_"
			    android:layout_gravity="center"
			    android:layout_width="wrap_content" 
			    android:layout_marginTop="5dip"
	    	    android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
    </LinearLayout>
    
</LinearLayout>