<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/main_title"/>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent">
            <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:padding="5dip"    	
			   	android:layout_marginTop="10dip"
			   	android:layout_marginLeft="10dip"
			   	android:layout_marginRight="10dip"
		    	android:orientation="horizontal">
		    	<TextView
		    	    android:layout_width="85dp"
		    	    android:layout_height="wrap_content"
		    	    android:text="@string/share_name"
		    	    android:textSize="18sp" />
		    	<LinearLayout 
			        android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:orientation="vertical"
			    	android:background="@drawable/nav_add_bg_normal"
			    	android:layout_weight="1">
			        <LinearLayout 
				        android:id="@+id/share_name_layout"
				        android:layout_width="fill_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="vertical">
				        
				    </LinearLayout>
				    <LinearLayout 
				        android:id="@+id/share_phone_layout"
				        android:layout_width="fill_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="vertical">
				        
				    </LinearLayout>
				    <include 
				        layout="@layout/share_input_layout"/>
			    </LinearLayout>
		        <ImageView 
		            android:id="@+id/share_name_image"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:padding="10dip"
		            android:src="@drawable/tangou_people"/>
		    </LinearLayout>
			<LinearLayout 
		        android:id="@+id/share_add_contact"
		        android:layout_width="match_parent"
		    	android:layout_height="150dip"
		    	android:padding="5dip"
		    	android:layout_marginTop="10dip"
		    	android:layout_marginLeft="10dip"
		    	android:layout_marginRight="10dip"
		    	android:orientation="horizontal">
		    	<TextView 
		    	    android:layout_width="90dip"
		    	    android:textSize="18sp"
		    	    android:layout_height="wrap_content"
		    	    android:text="@string/share_content_title"/>
		        <TextView 
		            android:id="@+id/share_content"
			        android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:orientation="vertical"
			    	android:padding="15dip"
			    	android:textSize="14sp"
			    	android:textColor="@color/share_content"
			    	android:background="@drawable/nav_add_bg_normal"/>  
		    </LinearLayout>
		    <TextView 
		        android:id="@+id/share_button"
		   	    android:layout_width="fill_parent"
		   	    android:gravity="center"
		   	    android:layout_marginLeft="20dip"
		   	    android:layout_marginRight="20dip"
		   	    android:layout_marginBottom="20dip"
		   	    android:textSize="18sp"
		   	    android:background="@drawable/button"
		   	    android:layout_height="wrap_content"
		   	    android:textColor="@android:color/white"
		   	    android:text="@string/share_ok"/>
        </LinearLayout>
    </ScrollView>    
    
</LinearLayout>
