<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical">
	    <RelativeLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:layout_margin="3dip"
	    	android:background="@drawable/fragment1_bgl">
	    	<ImageView 
	    	    android:id="@+id/bg_small_t"
	    	    android:src="@drawable/bg_big"
	    	    android:layout_marginLeft="10dip"
	    	    android:layout_marginTop="10dip"
	    	    android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"/>
		    <RelativeLayout 
		        android:id="@+id/bg_big_layout"
		        android:layout_centerHorizontal="true"
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content">
	    		<ImageView 
	    		    android:layout_centerInParent="true"
	    		    android:id="@+id/cylinder_1"
		        	android:src="@drawable/cylinder_00"		        	
		        	android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"/>
		        <TextView 
		            android:id="@+id/amount_desp_1"
		            android:layout_centerHorizontal="true"
		            android:textColor="@android:color/black"
		            android:textSize="11sp"
		            android:layout_marginTop="20dip"
		            android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
		            android:text="@string/home_amount"/>
		        <TextView 
		            android:id="@+id/amount_text_1"
		            android:layout_below="@id/amount_desp_1"
		            android:layout_centerHorizontal="true"
		            android:textColor="@android:color/black"
		            android:textSize="11sp"
		            android:layout_marginTop="5dip"
		            android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
		            android:text="@string/home_start"/>
		        <TextView 
		            android:id="@+id/unused_text_1"
		            android:layout_alignParentBottom="true"
		            android:layout_centerHorizontal="true"
		            android:textColor="@android:color/black"
		            android:textSize="11sp"
		            android:paddingBottom="20dip"
		            android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
		            android:text="@string/home_start"/>
		        <TextView 
		            android:id="@+id/unused_desp_1"
		            android:layout_above="@id/unused_text_1"
		            android:layout_centerHorizontal="true"
		            android:textColor="@android:color/black"
		            android:textSize="11sp"
		            android:layout_marginBottom="5dip"
		            android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
		            android:text="@string/home_unused"/>
		    </RelativeLayout>
		    <ImageView 
		        android:layout_toRightOf="@id/bg_big_layout"
		        android:layout_alignParentBottom="true"
		        android:id="@+id/button_go_flow_bank_1"
		        android:src="@drawable/button_bank_go"
		        android:layout_marginBottom="20dip"
		        android:layout_marginLeft="8dip"
		        android:visibility="invisible"
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"/>
		    
		    <ImageView 
		        android:layout_toRightOf="@id/bg_big_layout"
		        android:layout_above="@id/button_go_flow_bank_1"
		        android:id="@+id/button_go_1"
		        android:src="@drawable/button_go"
		        android:layout_marginLeft="8dip"
		        android:layout_marginBottom="20dip"
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"/>
		</RelativeLayout>
		<com.linkage.gas_station.myview.Fragment1_View 
		    android:id="@+id/extra_layout"
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1">
		</com.linkage.gas_station.myview.Fragment1_View >
	</LinearLayout>
	
</LinearLayout>